<!DOCTYPE resources [<!ENTITY appname "School tools"><!ENTITY author "Murilo Calegari de Souza">]>

<resources>
    <string name="app_name">Academic System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="subject">Subject</string>
    <string name="subjects">Subjects</string>
    <string name="schedule">Schedule</string>
    <string name="grades">Grades</string>
    <string name="events">Events</string>
    <string name="classes">Classes</string>
    <string name="drawer_secondary_title">Adjustments</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="Home">Home</string>
    <string name="hi">Hi,</string>
    <string name="edit">Edit</string>
    <string name="edit_username">Edit username</string>
    <string name="student">Student</string>

    <!-- Strings related to About -->

    <string name="app_about_1">
        This app is a fork of my original School Tools application.
    </string>
    <string name="app_about_2">
        When you login, your username and password are encrypted using the same algorithm as Q-Acadêmico. All data is retrieved exactly like you were browsing in the institution website.
    </string>
    <string name="developer_info">
        "This app was developed by &author; and it's hosted on GitHub at https://github.com/MuriloCalegari/Ifes-Academico. \n"
        "Please, fell free to contribute to this project; you can always contact me at murilo.calegari.souza@gmail.com
    </string>
    <string name="aboutActivityName">About</string>
    <string name="review">Please, don\'t forget to review by pressing the following button:</string>
    <string name="review_button">Rate us!</string>
    <string name="open_source_libraries">Open Source Libraries</string>

    <!-- Strings related to Settings -->

    <string name="title_activity_settings">Settings</string>
    <string name="total_classes">Total classes</string>
    <string name="total_classes_summary">How many classes do you have per day?</string>
    <string name="minimum_percentage">Minimum required grade</string>
    <string name="minimum_percentage_summary">Minimum percentage to be approved</string>

    <!-- Strings related to New Subject -->

    <string name="title_activity_new_subject">New Subject</string>
    <string name="name">Name</string>
    <string name="professor">Professor</string>
    <string name="abbreviation">Abbreviation</string>
    <string name="min_max_character_abbreviation_error">Abbreviation must have 2 to 6 characters</string>
    <string name="min_max_character_subject_name_error">Name size must have 2 to 40 characters</string>
    <string name="empty">(Empty)</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_data">Confirm data</string>
    <string name="everything_correct">Is everything correct?</string>
    <string name="subject_confirm_button">Create subject</string>
    <string name="min_max_character_professor_error">Professor name must have 2 to 40 characters</string>
    <string name="code_version">Code version:</string>

    <!-- Strings related to Edit Subject -->

    <string name="title_activity_edit_subject">Edit subject</string>
    <string name="subject_confirm_save_button">Save subject</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="abbreviation_already_on_database">Abbreviation is already in use</string>
    <string name="confirm_subject_delete_title">Delete subject?</string>
    <string name="confirm_subject_delete_message">This will permanently delete this subject and its grades</string>
    <string name="delete">Delete</string>

    <!-- Strings related to Subject Grades -->
    <string name="out_of">out of</string>
    <string name="title_activity_edit_subject_grade">Edit grade</string>
    <string name="description">Description</string>
    <string name="min_max_character_subject_grade_description_error">Description size must have 2 to 40 characters</string>
    <string name="obtained_grade">Obtained Grade</string>
    <string name="maximum_grade">Maximum Grade</string>
    <string name="maximum_grade_different_from_zero">Maximum grade must not equal zero</string>
    <string name="title_activity_new_subject_grade">New grade</string>
    <string name="is_extra_credit">Is extra credit?</string>
    <string name="save_grade">Save grade</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="extra_credit_subtitle">This maximum grade  won\'t be added to the subject\'s maximum grade</string>
    <string name="confirm_subject_grade_delete_title">Delete grade?</string>
    <string name="confirm_subject_grade_delete_message">This will permanently delete this grade</string>
    <string name="your_grades">Your grades</string>
    <string name="to_keep_an_eye">The lowest ones, to keep an eye!</string>

    <!-- Strings related to Schedules -->

    <string name="title_activity_new_subject_schedule">NewSubjectSchedule</string>
    <string name="error_alarm_days_min_days">A day should be marked</string>

    <string name="class_event_save_button">Save class</string>

    <string name="day_of_the_week">Day of the week</string>

    <string name="start_time">Start time</string>
    <string name="which_time_start">At which time does the class start?</string>
    <string name="end_time">End time</string>
    <string name="which_time_end">At which time does the class finish?</string>
    <string name="create_subject_first">Create a subject first!</string>
    <string name="end_time_before_start_time">End time is set before start time!</string>
    <string name="title_activity_edit_class_time">Edit class</string>
    <string name="confirm_class_event_delete_message" />
    <string name="confirm_class_event_delete_title">Delete class?</string>
    <string name="no_grades_availabe">You still haven\'t synchronized any grade!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string-array name="week_days">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>
    <string-array name="week_days_extended">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    // Login Activity

    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="invalid_login">Invalid login</string>

    <string name="connection_failure">Connection failure</string>
    <string name="success">Success</string>
    <string name="unknown_error">An unknown error occurred…</string>
    <string name="logout">Logout</string>

    <string name="date">Date</string>
    <string name="calendar">Calendar</string>
    <string name="upcoming_events">Tests are coming, be prepared!</string>
    <string name="accept_terms_and_conditions">I accept all the <a href="https://sites.google.com/view/app-sistema-academico/">terms and conditions</a></string>
    <string name="must_accept_terms_and_conditiosn_first">You must accept the terms and conditions first.</string>
    <string name="about_data_collection">About data collection</string>

    <string name="data_collection_explanation">
        "Hi, \n"
        "In order to improve your experience within the app I need to collect some of your usage data. Without them, I'm not able to provide most of the fixes I might need to make on this app.\n"
        "Some of the data I might collect include:\n"
        "* Information about your device;\n"
        "* Geographical region (limited to the user's city);\n"
        "* General statistics about the user's usage of the app (such as how is the user spending his time on the app);"
        "* Log data, which is fully described in <a href="https://sites.google.com/view/app-sistema-academico/">terms and conditions</a>.\n"
        "All this data is processed in third-party applications such as Google Firebase. I DO NOT gain access of you login and password information, it is fully restricted to your phone and it is only used for accessing Q-Acadêmico website in the background."
        "If you have any doubts, do not hesitate to contact me at murilo.calegari.souza@gmail.com"
    </string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="privacy">Privacy</string>
    <string name="data_collection">Data collection</string>
    <string name="data_collection_authorize">I authorize some data collection to improve the app\'s experience in general.</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="class_materials">Class Materials</string>

    <string name="username_collection">Username collection</string>
    <string name="username_collection_authorize">I authorize sharing my username to help the developers identify myself as a specific user.</string>

</resources>
