<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/subjects" />
        <item
            android:id="@+id/nav_schedules"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/schedules" />
        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/grades" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_classes"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/classes" />
    </group>

    <item android:title="@string/drawer_secondary_title">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
